2014-08-30  Yu-Jie Lin  <livibetter@gmail.com>
[FILES]
	* add: ChangeLog
	* rename: CHANGES.mkd to docs/CHANGES-OLD.mkd