@@ -2,3 +2,7 @@
 [FILES]
 	* add: ChangeLog
 	* rename: CHANGES.mkd to docs/CHANGES-OLD.mkd
+
+[main.c]
+	* print_help: add for help message
+	* main: add -h option for help message
